--- a/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.html
+++ b/client-myjss/src/app/modules/quotation/components/quotation/quotation.component.html
@@ -42,8 +42,7 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-secondary" (click)="modal.dismiss()">Annuler</button>
-      <button type="button" class="btn btn-danger ms-2"
-        (click)="finalCleanStorageData();modal.dismiss()">Confirmer</button>
+      <button type="button" class="btn btn-danger ms-2" (click)="finalCancel();modal.dismiss()">Confirmer</button>
     </div>
   </div>
 </ng-template>
