--- a/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
+++ b/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
@@ -43,9 +43,9 @@
       <table class="full-width" *ngIf="quotation.description">
         <tr>
           <td>
-            <generic-input [(model)]="quotation.description" label="Description de la demande"
-              [form]="orderingCustomerForm" propertyName="description" [isMandatory]="false"
-              [isDisabled]="true"></generic-input>
+            <generic-textarea [(model)]="quotation.description" label="Description de la demande"
+              [form]="orderingCustomerForm" propertyName="description" [isMandatory]="false" [isDisabled]="true"
+              [numberOfLines]="4"></generic-textarea>
           </td>
         </tr>
       </table>
