--- a/client-myjss/src/app/modules/my-account/components/user-settings/user-settings.component.html
+++ b/client-myjss/src/app/modules/my-account/components/user-settings/user-settings.component.html
@@ -1,4 +1,4 @@
-<h1 class="h2 mb-4">Mon compte</h1>
+<h1 class="h2 mb-4">Mes comptes associés</h1>
 
 <div class="d-flex align-items-center mb-4" *ngIf="userScope && userScope.length>1 && currentUser">
   <div class="ms-auto">
