--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -15105,11 +15105,11 @@ iframe {
 }
 
 ::-moz-selection {
-  background: var(--ar-user-selection-color);
+  /* background: var(--ar-user-selection-color); */
 }
 
 ::selection {
-  background: var(--ar-user-selection-color);
+  /* background: var(--ar-user-selection-color); */
 }
 
 b,
