--- a/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
+++ b/client/src/app/modules/quotation/components/ordering-customer/ordering-customer.component.html
@@ -25,8 +25,7 @@
             </td>
             <td>
               <autocomplete-voucher [(model)]="quotation.voucher" [form]="orderingCustomerForm" propertyName="voucher"
-                label="Coupon de réduction" [isDisabled]="!editMode"
-                (onOptionSelected)="checkValidityVoucher()"></autocomplete-voucher>
+                label="Coupon de réduction" [isDisabled]="!editMode"></autocomplete-voucher>
             </td>
           </fieldset>
         </tr>
