--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -468,7 +468,7 @@
       <h3 class="h6 mb-0 me-3 mt-3 text-blue">Destinataires de la facture</h3>
     </div>
     <div class="form-check">
-      <generic-toggle *ngIf="quotation!.assoAffaireOrders!.length == 1" [(model)]="document.isRecipientAffaire"
+      <generic-toggle *ngIf="quotation!.assoAffaireOrders!.length==1" [(model)]="document.isRecipientAffaire"
         label="L'envoyer à mon client" [form]="documentForm" propertyName="isRecipientAffaireBilling"
         [isMandatory]="false">
       </generic-toggle>
@@ -677,23 +677,30 @@
         </div>
 
         <div class="border-top pt-4 mb-3">
-          <div class="input-group input-group-sm border-dashed">
-            <input class="form-control text-uppercase" [(ngModel)]="quotation.voucher.code" type="text"
+          <div *ngIf="!quotation.voucher || (quotation.voucher && (!discountAmountTotal || discountAmountTotal==0))"
+            class="input-group input-group-sm border-dashed">
+            <input class="form-control text-uppercase" [(ngModel)]="voucherCode" type="text"
               placeholder="Code de réduction">
+            <div *ngIf="isComputingPrice && voucherCode" class="spinner-border spinner-border-sm" role="status">
+              <span class="visually-hidden"></span>
+            </div>
             <button class="btn btn-secondary" type="button" (click)="applyVoucher()">Appliquer</button>
-            <a class="nav-link fs-xl p-2" *ngIf="quotation.voucher.code && quotation.voucher.code.length>0"
-              (click)="deleteVoucherPricing()">
-              <i class="ai-trash"></i>
-            </a>
           </div>
         </div>
         <ul class="list-unstyled pt-3 mb-0">
-          <li *ngIf="quotation && quotation.voucher && quotation.voucher.id"
+          <li
+            *ngIf="quotation && quotation.voucher && quotation.voucher.id && discountAmountTotal && discountAmountTotal>0"
             class="d-flex justify-content-between mb-2">
-            Réduction appliquée : <div *ngIf="discountAmountTotal && discountAmountTotal>0">
+            Code appliqué : {{quotation.voucher.code}}
+            <br>
+            Réduction appliquée :
+            <div *ngIf="discountAmountTotal && discountAmountTotal>0">
               <span class="fw-semibold ms-2">{{discountAmountTotal |
                 currency:'EUR'}}</span>
             </div>
+            <a class="nav-link fs-xl p-2" (click)="deleteVoucherPricing()">
+              <i class="ai-trash"></i>
+            </a>
           </li>
           <li class="d-flex justify-content-between mb-2">
             Sous-total:
