--- a/client-myjss/src/app/modules/my-account/components/scope/scope.component.html
+++ b/client-myjss/src/app/modules/my-account/components/scope/scope.component.html
@@ -1,4 +1,4 @@
-<h1 class="h2 mb-4">Vue d'ensemble</h1>
+<h1 class="h2 mb-4">Périmètre</h1>
 
 
 <section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4">
