--- a/client-myjss/src/app/modules/my-account/components/account-menu/account-menu.component.html
+++ b/client-myjss/src/app/modules/my-account/components/account-menu/account-menu.component.html
@@ -10,7 +10,7 @@
       <nav class="nav flex-column pb-2 pb-lg-4 mb-3">
         <h4 class="fs-xs fw-medium text-body-secondary text-uppercase pb-1 mb-2">Mon compte</h4>
         <ng-container *ngFor="let menuItem of menuItems">
-          <a class="nav-link fw-semibold py-2 px-0"
+          <a class="nav-link fw-semibold py-2 px-0 nav-link-active"
             [ngClass]="{'active':  getCurrentRoute().indexOf(menuItem.route)>=0}" [routerLink]="menuItem.route"
             *ngIf="menuItem.mainItem==MAIN_ITEM_ACCOUNT">
             <i class="fs-5 opacity-60 me-2" [ngClass]="menuItem.iconClass"></i>
@@ -21,7 +21,7 @@
       <nav class="nav flex-column pb-2 pb-lg-4 mb-1">
         <h4 class="fs-xs fw-medium text-body-secondary text-uppercase pb-1 mb-2">Tableau de bord</h4>
         <ng-container *ngFor="let menuItem of menuItems">
-          <a class="nav-link fw-semibold py-2 px-0 "
+          <a class="nav-link fw-semibold py-2 px-0 nav-link-active "
             [ngClass]="{'active':  getCurrentRoute().indexOf(menuItem.route)>=0}" [routerLink]="menuItem.route"
             *ngIf="menuItem.mainItem==MAIN_ITEM_DASHBOARD">
             <i class="fs-5 opacity-60 me-2" [ngClass]="menuItem.iconClass"></i>
