--- a/client-myjss/src/app/modules/my-account/components/bookmarks/bookmarks.component.html
+++ b/client-myjss/src/app/modules/my-account/components/bookmarks/bookmarks.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
       <i class="bi-bookmark-fill text-dark rounded-circle lead pe-1 me-2"></i>
-      <h2 class="h4 mb-0">Liste de lecture </h2>
+      <h2 class="h4 mb-0">Liste de lecture {{readingFolder?readingFolder.label:''}} </h2>
     </div>
     <div class="d-md-flex align-items-center">
       <div class="d-sm-flex align-items-center">
