--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -21,7 +21,7 @@
       (click)="openOrderDetails($event ,associatedCustomerOrder);$event.stopPropagation();">{{associatedCustomerOrder.id}}</a>
   </div>
 </div>
-<div class="d-flex align-items-center mb-4"
+<div class="d-flex flex-column flex-md-row align-items-center mb-4"
   *ngIf="quotation && quotationAssoAffaireOrders && quotationAssoAffaireOrders.length>1 && selectedAssoAffaireOrder">
   <div class="ms-auto">
     <div ngbDropdown class="btn-group dropdown" style="margin-right: 10px;">
@@ -49,7 +49,7 @@
 </div>
 <section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4 mb-4" *ngIf="quotation && selectedAssoAffaireOrder">
   <div class="card-body">
-    <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
+    <div class="d-flex flex-column flex-md-row align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
       <i class="ai-briefcase text-primary lead pe-1 me-2"></i>
       <h2 class="h4 mb-0">
         Affaire :
@@ -67,7 +67,7 @@
           *ngIf="(!selectedAssoAffaireOrder.affaire.mails || selectedAssoAffaireOrder.affaire.mails.length==0)">&nbsp;le
           mail</span>
       </a>
-      <ng-template #just_edit_affaire> <a class="btn btn-sm  ms-auto btn-secondary" role="button"
+      <ng-template #just_edit_affaire> <a class="btn btn-sm  mt-3 mt-md-0 ms-md-auto btn-secondary" role="button"
           (click)="editAffaireDetails(selectedAssoAffaireOrder.affaire, $event)">
           <i class="ai-edit ms-n1 me-2"></i>
           Modifier
@@ -364,10 +364,11 @@
   <section class="col">
     <div class="card h-100 border-0 py-1 p-md-2 p-xl-3 p-xxl-4">
       <div class="card-body">
-        <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-1 mb-lg-2">
+        <div class="d-flex flex-column flex-md-row align-items-center mt-sm-n1 pb-4 mb-1 mb-lg-2">
           <i class="ai-map-pin text-primary lead pe-1 me-2"></i>
           <h2 class="h4 mb-0">Adresses</h2>
-          <a class="btn btn-sm btn-secondary ms-auto" (click)="editAddress($event)" *ngIf="canEditQuotation">
+          <a class="btn btn-sm btn-secondary mt-3 mt-md-0 ms-md-auto" (click)="editAddress($event)"
+            *ngIf="canEditQuotation">
             <i class="ai-edit ms-n1 me-2"></i>
             Modifier
           </a>
@@ -432,11 +433,11 @@
   <section class="col">
     <div class="card h-100 border-0 py-1 p-md-2 p-xl-3 p-xxl-4">
       <div class="card-body">
-        <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-1 mb-lg-2">
+        <div class="d-flex flex-column flex-md-row align-items-center mt-sm-n1 pb-4 mb-1 mb-lg-2">
           <i class="ai-wallet text-primary lead pe-1 me-2"></i>
           <h2 class="h4 mb-0">Facturation</h2>
-          <a class="btn btn-sm btn-secondary ms-auto" *ngIf="quotation && invoiceSummary && displayPayButton"
-            (click)="payQuotation($event)">
+          <a class="btn btn-sm btn-secondary mt-3 mt-md-0 ms-md-auto"
+            *ngIf="quotation && invoiceSummary && displayPayButton" (click)="payQuotation($event)">
             <i class="ai-cart ms-n1 me-2"></i>Payer un acompte
           </a>
         </div>
@@ -472,6 +473,15 @@
             </span>
             <span class="ms-auto">
               <h6>{{invoiceSummary.totalPrice| currency:'EUR' }}</h6>
+            </span>
+          </div>
+          <div class="d-flex align-items-center fs-sm text-dark pb-1 mb-2"
+            *ngIf="this.invoiceSummary && this.invoiceSummary.remainingToPay>0">
+            <span class="ms-2">
+              <h6>Retant dû</h6>
+            </span>
+            <span class="ms-auto">
+              <h6>{{invoiceSummary.remainingToPay| currency:'EUR' }}</h6>
             </span>
           </div>
         </div>
