--- a/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
@@ -7,9 +7,12 @@
 
       <div class="col-md-6 col-xl-5 offset-xl-1">
         <p class="text-body fs-lg mb-5 text-white">Confiez à nos experts vos documents à authentifier pour une démarche
-          à l'étranger ou en France.</p>
-        <double-buttons orderActionLabel="Demander une apostille ou légalisation"
-          quotationActionLabel="Demander un devis" linkLabel="Lien vers le simulateur">
+          à l'étranger ou en France.{{serviceFamilyGroupOther}}</p>
+        <double-buttons class="text-grey" orderActionLabel=" Demander une apostille ou légalisation"
+          [orderActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeOrder.id"
+          quotationActionLabel="Demander un devis"
+          [quotationActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeQuotation.id"
+          [isLightButtons]="true">
         </double-buttons>
       </div>
     </div>
