--- a/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
@@ -8,8 +8,11 @@
       <div class="col-md-6 col-xl-5 offset-xl-1">
         <p class="text-body fs-lg mb-5 text-white">Domiciliez votre entreprise à une adresse prestigieuse au cœur de
           Paris et bénéficiez d’un service de redirection personnalisé. </p>
-        <double-buttons orderActionLabel="Domicilier mon entreprise" quotationActionLabel="Demander un devis"
-          linkLabel="Bien choisir la domiciliation d'entreprise">
+        <double-buttons class="text-grey" orderActionLabel=" Domicilier mon entreprise"
+          [orderActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeOrder.id"
+          quotationActionLabel="Demander un devis"
+          [quotationActionRoute]="'quotation/new/'+serviceFamilyGroupOther!.id+'/'+quotationTypeQuotation.id"
+          linkLabel="Bien choisir la domiciliation d'entreprise" [isLightButtons]="true">
         </double-buttons>
       </div>
     </div>
