--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -8,7 +8,11 @@
       <div class="col-md-6 col-xl-5 offset-xl-1">
         <p class="text-body fs-lg mb-5 text-white">Confiez vos formalités légales à nos juristes formalistes afin de
           vous consacrer à votre coeur de métier. </p>
-        <double-buttons orderActionLabel="Déposer une formalité" quotationActionLabel="Demander un devis">
+        <double-buttons class="text-grey" orderActionLabel=" Déposer une formalité"
+          [orderActionRoute]="'quotation/new/'+serviceFamilyGroupFormality!.id+'/'+quotationTypeOrder.id"
+          quotationActionLabel="Demander un devis"
+          [quotationActionRoute]="'quotation/new/'+serviceFamilyGroupFormality!.id+'/'+quotationTypeQuotation.id"
+          [isLightButtons]="true">
         </double-buttons>
       </div>
     </div>
